--- a/html-css/css/components/employee.css
+++ b/html-css/css/components/employee.css
@@ -8,7 +8,7 @@
 .header-left {
     width: 200px;
     height: 100%;
-    background-color: #213253;
+    background-color: #393a3d;
     display: flex;
     align-items: center;
 }
@@ -17,6 +17,7 @@
     width: 24px;
     height: 24px;
     margin: 0 16px;
+    cursor: pointer;
 }
 
 .logo {
@@ -29,31 +30,81 @@
 .img-icon {
     width: 92px;
     height: 36px;
+    cursor: pointer;
 }
 
 .header-right {
+    position: relative;
     display: flex;
     align-items: center;
     width: calc(100% - 200px);
     height: 100%;
+    font-size: 14px;
+    color: #666666;
+    background-color: #fff;
 }
 
 .header-branch {
+    width: 100%;
+    max-width: 300px;
     display: flex;
+    cursor: pointer;
 }
 
 .header-branch-name {
-    max-width: 160px;
+    width: 100%;
+    max-width: 260px;
     height: 100%;
-    font-size: 14px;
+    font-family: notosans Bold;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
 }
 
 .header-branch-icon {
-    width: 14px;
-    height: 14px;
+    width: 34px;
+    display: flex;
+    justify-content: center;
+}
+
+.menu-right {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 0;
+    background-color: #fff;
+}
+
+.m-icon.nav-icon {
+    margin: 0 12px;
+}
+
+.dropdown-user {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    outline: none;
+    border: none;
+    padding: 0 16px;
+    margin-right: 16px;
+    border-radius: 4px;
+    border: 3px solid transparent;
+
+    cursor: pointer;
+}
+
+.dropdown-user:focus {
+    border: 3px solid #dcdcdc;
+}
+
+.username {
+    font-family: notosans Bold;
+    padding: 0 8px;
+}
+
+.header-user-ava-img {
+    border-radius: 50%;
 }
 
 /* body */
@@ -62,11 +113,50 @@
     height: calc(100vh - 56px);
 }
 
+/* sidebar */
+
 .sidebar {
     width: 200px;
     height: 100%;
-    background-color: blue;
+    background-color: #393a3d;
+}
 
+.sidebar-item-list {
+    height: 100%;
+    padding-top: 20px;
+}
+
+.sidebar-item {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 44px;
+    border-left: 6px solid transparent;
+    cursor: pointer;
+}
+
+.sidebar-item-icon {
+    width: 24px;
+    height: 24px;
+    margin: 12px 12px 12px 6px;
+}
+
+.sidebar-item-title {
+    font-size: 14px;
+    color: #fff;
+}
+
+.sidebar-item:hover {
+    background-color: hsla(218, 10%, 85%, 0.2);
+}
+
+.sidebar-item.active {
+    border-left: 6px solid #2ca01c;
+    background-color: hsla(218, 10%, 85%, 0.2);
+}
+
+.sidebar-item.active .sidebar-item-title {
+    font-family: notosans Bold;
 }
 
 .page {
