--- a/html-css/layouts/employee.html
+++ b/html-css/layouts/employee.html
@@ -17,17 +17,91 @@
                 </div>
                 <!-- <div class="name">KẾ TOÁN</div> -->
             </div>
+
             <div class="header-right">
                 <div class="m-icon menu-icon"></div>
                 <div class="header-branch">
                     <div class="header-branch-name">CÔNG TY TNHH SẢN XUẤT - THƯƠNG MẠI - DỊCH VỤ QUI PHÚC</div>
-                    <div class="header-branch-icon"></div>
+                    <div class="header-branch-icon">
+                        <div class="branch-icon"></div>
+                    </div>
+                </div>
+                <div class="menu-right">
+                    <div class="tooltip-content">
+                        <div class="m-icon nav-icon notify-icon"></div>
+                    </div>
+                    <button class="dropdown-user">
+                        <div class="header-user-ava-img"></div>
+                        <div class="username">Nguyễn Văn Mạnh</div>
+                        <div class="dropdown-icon"></div>
+                    </button>
                 </div>
             </div>
         </div>
         <div class="body">
             <div class="sidebar">
-                Sidebar
+                <div class="sidebar-item-list">
+                    <div class="sidebar-item">
+                        <div class="sidebar-item-icon sidebar-dashboard-icon"></div>
+                        <div class="sidebar-item-title">Tổng quan</div>
+                    </div>
+                    <div class="sidebar-item active">
+                        <div class="sidebar-item-icon sidebar-cash-icon"></div>
+                        <div class="sidebar-item-title">Tiền mặt</div>
+                    </div>
+                    <div class="sidebar-item">
+                        <div class="sidebar-item-icon sidebar-bank-icon"></div>
+                        <div class="sidebar-item-title">Tiền gửi</div>
+                    </div>
+                    <div class="sidebar-item">
+                        <div class="sidebar-item-icon sidebar-buy-icon"></div>
+                        <div class="sidebar-item-title">Mua hàng</div>
+                    </div>
+                    <div class="sidebar-item">
+                        <div class="sidebar-item-icon sidebar-sale-icon"></div>
+                        <div class="sidebar-item-title">Bán hàng</div>
+                    </div>
+                    <div class="sidebar-item">
+                        <div class="sidebar-item-icon sidebar-invoice-icon"></div>
+                        <div class="sidebar-item-title">Quản lý hóa đơn</div>
+                    </div>
+                    <div class="sidebar-item">
+                        <div class="sidebar-item-icon sidebar-stock-icon"></div>
+                        <div class="sidebar-item-title">Kho</div>
+                    </div>
+                    <div class="sidebar-item">
+                        <div class="sidebar-item-icon sidebar-tools-icon"></div>
+                        <div class="sidebar-item-title">Công cụ dụng cụ</div>
+                    </div>
+                    <div class="sidebar-item">
+                        <div class="sidebar-item-icon sidebar-fixed-assets-icon"></div>
+                        <div class="sidebar-item-title">Tài sản cố định</div>
+                    </div>
+                    <div class="sidebar-item">
+                        <div class="sidebar-item-icon sidebar-tax-icon"></div>
+                        <div class="sidebar-item-title">Thuế</div>
+                    </div>
+                    <div class="sidebar-item">
+                        <div class="sidebar-item-icon sidebar-price-icon"></div>
+                        <div class="sidebar-item-title">Giá thành</div>
+                    </div>
+                    <div class="sidebar-item">
+                        <div class="sidebar-item-icon sidebar-general-icon"></div>
+                        <div class="sidebar-item-title">Tổng hợp</div>
+                    </div>
+                    <div class="sidebar-item">
+                        <div class="sidebar-item-icon sidebar-budget-icon"></div>
+                        <div class="sidebar-item-title">Ngân sách</div>
+                    </div>
+                    <div class="sidebar-item">
+                        <div class="sidebar-item-icon sidebar-report-icon"></div>
+                        <div class="sidebar-item-title">Báo cáo</div>
+                    </div>
+                    <div class="sidebar-item">
+                        <div class="sidebar-item-icon sidebar-finance-icon"></div>
+                        <div class="sidebar-item-title">Phân tích tài chính</div>
+                    </div>
+                </div>
             </div>
             <div class="page">
                 <div class="page-header">header</div>
