--- a/css/layout/sidebar.css
+++ b/css/layout/sidebar.css
@@ -1,12 +1,14 @@
 .sidebar {
+  position: relative;
   width: 200px;
   box-sizing: border-box;
   background-color: var(--primary-color);
+  overflow-y: auto;
 }
 .sidebar__header {
   display: flex;
   align-items: center;
-  height: 56px;
+  height: var(--height-header);
   width: 100%;
   color: #fff;
 }
@@ -15,8 +17,16 @@
   width: 24px;
   height: 24px;
   margin: 0 16px;
+  cursor: pointer;
 }
-
+.sidebar__logo-wrapper {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.sidebar__logo-wrapper > span {
+  margin-left: 8px;
+}
 .sidebar__logo {
   width: 20px;
   height: 20px;
@@ -24,6 +34,7 @@
   background: url(../../assets/favicon.ico) no-repeat;
   background-position-y: center;
   background-size: 24px 24px;
+  cursor: pointer;
 }
 .sidebar__header > span {
   margin-left: 8px;
@@ -34,13 +45,12 @@
   width: 100%;
   overflow-y: auto;
 }
-.menu__item {
-}
 .menu__item + .menu__item {
   margin-bottom: 4px;
 }
 .menu-item__link {
-  display: block;
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 44px;
   color: var(--dark-title-color);
@@ -49,42 +59,61 @@
   box-sizing: border-box;
 }
 .menu-item__link:hover {
-  background-color: var(--primary-color);
+  background-color: var(--dark-disable-color);
 }
-.menu-item__icon {
-  margin: 0 12px;
-  width: 24px;
-  background: url(../../assets/img/Sprites.64af8f61.svg) no-repeat;
-  background-size: 24px;
+.menu-item__link--active {
+  background-color: var(--dark-disable-color);
+  border-left: 5px solid #2ca01c;
+  font-weight: 700;
 }
+
 .sidebar__dashboard {
   background-position: -33px -1630px;
 }
 .sidebar__cash {
+  background-position: -73px -1628px;
 }
 .sidebar__bank {
+  background-position: -117px -1628px;
 }
-.sidebar__Purchase {
+.sidebar__purchase {
+  background-position: -161px -1628px;
 }
 .sidebar__sale {
+  background-position: -204px -1628px;
 }
 .sidebar__invoice {
+  background-position: -249px -1628px;
 }
 .sidebar__stock {
+  background-position: -291px -1628px;
 }
 .sidebar__tools {
+  background-position: -336px -1628px;
 }
 .sidebar__fixed-assets {
+  background-position: -378px -1630px;
 }
 .sidebar__tax {
+  background-position: -423px -1630px;
 }
 .sidebar__price {
+  background-position: -467px -1628px;
 }
-.sidebar__genneral {
+.sidebar__general {
+  background-position: -510px -1628px;
 }
 .sidebar__budget {
+  background-position: -378px -1659px;
 }
 .sidebar__report {
+  background-position: -547px -1628px;
 }
 .sidebar__finance {
+  background-position: -204px -1664px;
+}
+/* Tool Tip */
+a[data-c-tooltip] {
+}
+a[data-c-tooltip]::after {
 }
