--- a/css/layout/content.css
+++ b/css/layout/content.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   background-color: var(--disable-color);
-  padding: 41px 24px;
+  padding: 24px;
   box-sizing: border-box;
 }
 .content__toolbar {
@@ -10,9 +10,8 @@
   align-items: center;
   justify-content: space-between;
 }
-.title {
-}
+
 .content__title {
-}
-.btn {
+  font-size: 24px;
+  font-weight: 700;
 }
