--- a/css/bases/variables.css
+++ b/css/bases/variables.css
@@ -1,22 +1,29 @@
 :root {
   --main-color: #50b83c;
-  --light-color:#10250C;
-  --secondary-color: #73C663;
-
+  --background-hover-color: #57c841;
+  --light-color: #10250c;
+  --secondary-color: #73c663;
+  --border-color: #e0e1e4;
+  --light-color: #eef8ec;
+  --background-menu-color: #041434;
+  --sidebar-text-color: #869ab8;
+  --sidebar-hover-color: #1e3155;
+  --background-item-color: #27395e;
+  --disable-color: #9e9e9e;
+  --background-table-color: #f5f5f5;
   /* Nền sáng */
-  --title-color: #000000;
+  /* --title-color: #000000;
   --primary-color: #212121;
   --secondary-color: #666666;
-  --disable-color: #9e9e9e;
-  --border-color: #e0e0e0;
-  --background-color: #f7f7f7;
-  /* Nền tối */
+  /* --border-color: #e0e0e0; 
+  --background-color: #f7f7f7;*/
+  /* Nền tối 
   --dark-title-color: #ffffff;
   --dark-primary-color: #bddee3;
   --dark-secondary-color: #7b8798;
   --dark-disable-color: #4b5b73;
   --dark-border-color: #334560;
-  --dark-background-color: #182d4b;
+  --dark-background-color: #182d4b; */
   /* height header */
   --height-header: 56px;
 }
