--- a/css/layout/content.css
+++ b/css/layout/content.css
@@ -1,17 +1,48 @@
 .content {
   width: 100%;
-  height: 100vh;
   background-color: var(--disable-color);
+  height: calc(100% - var(--height-header));
   padding: 24px;
   box-sizing: border-box;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+/* Toolbar */
 .content__toolbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 16px;
 }
-
 .content__title {
   font-size: 24px;
   font-weight: 700;
+}
+/* List header */
+.list__header {
+  justify-content: space-between;
+  margin-bottom: 12px;
+}
+.content__list {
+  height: calc(100% - 104px);
+  padding: 12px 20px 0 16px;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+/* left */
+.list__toolbar {
+  max-width: 296px;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+}
+/* right */
+.list-header--chose-company {
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  position: relative;
 }
