--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -1,27 +1,22 @@
 .main {
   width: 100%;
+  height: 100vh;
 }
-.main__header {
+.header {
   position: sticky;
   top: 0;
-  left: 0;
-  right: 0;
   height: var(--height-header);
   background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.main__header--left {
+.header--left,
+.header--right {
   display: flex;
   align-items: center;
 }
-.header__icon {
-  margin: 0 24px;
-  background-position: -843px -30px;
-}
-.header__branch {
-}
+
 .header__branch-drop-down {
   transform: rotate(90deg);
   background-position: -75px -355px;
@@ -45,16 +40,14 @@
   align-items: center;
   justify-content: center;
   margin-left: 24px;
+  font-family: "Roboto";
 }
 .user__avt {
-  width: 32px;
-  height: 32px;
+  width: 36px;
+  height: 36px;
   border-radius: 50%;
   background-position: -608px -1140px;
 }
 .user__name {
   margin: 0 8px;
-}
-.user__icon-drop-down {
-  background-position: -1076px -28px;
 }
