--- a/css/layout/menu.css
+++ b/css/layout/menu.css
@@ -1,27 +1,32 @@
 /* MENU */
 .menu {
-  padding-top: 24px;
+  padding-top: 20px;
   width: 100%;
   overflow-y: auto;
+  background-color: var(--background-menu-color);
 }
-.menu__item + .menu__item {
-  margin-bottom: 4px;
-}
+
 .menu-item__link {
   display: flex;
   align-items: center;
   width: 100%;
   height: 44px;
-  color: var(--dark-title-color);
+  color: var(--sidebar-text-color);
   text-decoration: none;
   list-style: none;
   box-sizing: border-box;
+  margin: 0 12px;
+  border-radius: 4px;
+}
+.menu__item + .menu__item {
+  padding-top: 4px;
 }
 .menu-item__link:hover {
-  background-color: var(--dark-disable-color);
+  background-color: var(--sidebar-hover-color);
 }
 .menu-item__link--active {
-  background-color: var(--dark-disable-color);
-  border-left: 5px solid #2ca01c;
+  background-color: var(--sidebar-hover-color);
   font-weight: 700;
+  color: #fff;
+  fill: #fff;
 }
