--- a/css/bases/variables.css
+++ b/css/bases/variables.css
@@ -11,6 +11,8 @@
   --background-item-color: #27395e;
   --disable-color: #9e9e9e;
   --background-table-color: #f5f5f5;
+  --background-btn-secondary: #e0e0e0;
+  --primary-text-color: #212121;
   /* Nền sáng */
   /* --title-color: #000000;
   --primary-color: #212121;
