--- a/css/main.css
+++ b/css/main.css
@@ -17,10 +17,13 @@
 @import url(./bases/table.css);
 @import url(./bases/pagination.css);
 @import url(./bases/dialog.css);
+@import url(./bases/toast.css);
+@import url(./bases/animations.css);
+@import url(./bases/form.css);
 /* Sử dụng chung*/
 /* Text */
 .heading {
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 700;
   line-height: 26px;
 }
