--- a/css/bases/variables.css
+++ b/css/bases/variables.css
@@ -13,6 +13,9 @@
   --background-table-color: #f5f5f5;
   --background-btn-secondary: #e0e0e0;
   --primary-text-color: #212121;
+  --error-color: #de3618;
+  --warring-color: #ff7777;
+  --infor-color: #009eeb;
   /* Nền sáng */
   /* --title-color: #000000;
   --primary-color: #212121;
