--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,8 @@
 @import url(./bases/subcombobox.css);
 @import url(./layout/container.css);
 @import url(./layout/sidebar.css);
-@import url(./layout/main.css);
 @import url(./layout/header.css);
 @import url(./layout/menu.css);
-@import url(./layout/footer.css);
 @import url(./layout/content.css);
 @import url(./bases/table.css);
 @import url(./bases/pagination.css);
@@ -91,5 +89,7 @@
 .w-100 {
   width: 100px;
 }
-
+.border-focus {
+  border: 1px solid var(--main-color);
+}
 /*  */
