--- a/css/bases/dialog.css
+++ b/css/bases/dialog.css
@@ -8,7 +8,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  display: none;
 }
 .dialog__content {
   background-color: #fff;
@@ -24,16 +23,26 @@
   font-size: 20px;
   font-weight: 700;
   text-align: left;
-  display: flex;
-  align-items: center;
   justify-content: space-between;
 }
+.dialog-header__title {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 280px;
+  overflow: hidden;
+}
 .dialog-content__container {
+  max-width: 400px;
   margin: 24px 0;
   text-align: left;
+  display: flex;
+  flex-wrap: wrap;
 }
 .dialog-content__footer {
   display: flex;
   justify-content: flex-end;
   column-gap: 8px;
+}
+#dialog {
+  display: none;
 }
