--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,16 @@
-@import url('./toolbar.css');
+@import url('./layout/toolbar.css');
 @import url('./toolbarSmall.css');
+@import url('./layout/content.css');
+@import url('./base/paging.css');
+@import url('./base/scroll.css');
+@import url('./popup.css');
+@import url('./layout/popup.css');
+@import url('./base/input.css');
+@import url('./base/table.css');
+@import url('./base/checkbox.css');
+@import url('./base/combobox.css');
+@import url('./base/button.css');
+@import url('./base/dropdown.css');
 * {
     margin: 0;
     padding: 0;
@@ -7,7 +18,7 @@
 }
 body {
     font-family: 'notosans';
-    font-size: 14px;
+    font-size: 13px;
 }
 
 @font-face {
@@ -29,6 +40,6 @@ body {
 
 .wrp {
     width: 100%;
-    max-width: 1366px;
+    min-width: 1280px;
     margin: 0 auto;
 }
