--- a/css/base/combobox.css
+++ b/css/base/combobox.css
@@ -1,4 +1,3 @@
-
 .m-combo-box {
     position: relative;
     width: 100%;
@@ -45,6 +44,7 @@
 }
 
 .m-btn-dropdown {
+    position: relative;
     width: 36px;
     background-color: transparent;
     display: flex;
@@ -56,4 +56,110 @@
 .m-btn-dropdown:hover {
     background-color: #e0e0e0;
     border-color: #e0e0e0;
+}
+
+
+.m-combo-dropdown-panel,
+.m-combo-menu {
+    transition: opacity .1s, transform .1s, width .2s ease;
+    z-index: 10000;
+    position: absolute;
+    background-color: #fff;
+    border: 1px solid #babec5;
+    border-radius: 4px;
+    overflow: hidden;
+    box-shadow: 0 -8px 34px 0 rgba(0, 0, 0, .05);
+}
+
+.m-combo-menu {
+    min-width: 400px;
+    display: none;
+
+}
+
+.m-combo-dropdown-panel {
+    min-width: 200px;
+}
+
+.m-dropdown-body-container {
+    padding: 2px 0;
+}
+
+.m-combo-box-item {
+    display: flex;
+    align-items: center;
+    flex: 1;
+    padding: 0 14px 0 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 13px;
+    height: 32px;
+    cursor: pointer;
+}
+
+.m-combo-box-item:hover {
+    background-color: #ebedf0;
+    color: #2ca01c;
+}
+
+.m-item-highlight {
+    background-color: #2ca01c !important;
+    color: #fff !important;
+}
+
+.m-dropdown-close {
+    transform: rotate(0deg);
+    transition: transform .15s linear;
+}
+
+.m-dropdown-open {
+    transform: rotate(180deg);
+    transition: transform .15s linear;
+}
+
+
+/* Combo box có table */
+.m-combo-menu-header {
+    background: #f4f5f8;
+}
+
+.m-menu-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.m-menu-header {
+    color: #111;
+    height: 32px;
+}
+
+.m-menu-header-th {
+    padding: 0 10px;
+    height: 32px;
+}
+
+.m-combo-menu-content {
+    max-height: 160px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 2px 1px;
+}
+
+.m-menu-items-tr {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    height: 32px;
+    line-height: 32px;
+    white-space: nowrap;
+}
+
+.m-menu-items-tr:hover {
+    color: #35bf22;
+    background-color: #ebedf0;
+}
+
+.toggle {
+    display: block;
 }
