--- a/css/base/dropdown.css
+++ b/css/base/dropdown.css
@@ -21,6 +21,13 @@
     outline: 1px solid #0075c0;
 }
 
+.m-button-text {
+    font-family: Notosans-Semibold;
+    font-size: 13px;
+    line-height: 13px;
+    color: inherit;
+}
+
 .m-dropdown-button-text {
     padding: 6px 1px 6px 16px;
 }
@@ -35,3 +42,54 @@
     width: 46px;
 }
 
+.m-dropdown-menu {
+    /* display: none; */
+    padding-top: 10px;
+    position: absolute;
+    height: auto;
+    width: auto;
+    z-index: 9990;
+    transform: translate(-100%);
+    transition: opacity .25s, transform .25s, width .3s ease;
+}
+
+
+.m-dropdown-menu-items {
+    background: #fff;
+    padding: 2px 1px;
+    border-radius: 2px;
+    border: 1px solid #babec5;
+    position: relative;
+}
+
+.m-dropdown-item {
+    white-space: nowrap;
+    transition: all .2s ease;
+    position: relative;
+    z-index: 1000;
+    text-align: left;
+    width: 100%;
+    list-style: none;
+    min-width: 100px;
+    font-family: Notosans-Semibold !important;
+    font-size: 13px;
+}
+
+.m-dropdown-item:hover {
+    color: #08bf1e;
+    background-color: #e8e9ec;
+}
+
+.m-dropdown-item-link {
+    background: inherit !important;
+    color: inherit !important;
+    cursor: pointer;
+    transition: all .2s ease;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 100%;
+    position: relative;
+    display: block;
+    color: rgba(0, 0, 0, .7);
+}
