--- a/css/layout/main-content.css
+++ b/css/layout/main-content.css
@@ -2,76 +2,86 @@
     background-color: #eceef1;
     position: relative;
     height: calc(100vh - 56px);
-    padding:  24px;
+    padding: 24px;
     display: flex;
     flex: 1;
     flex-direction: column;
-    /* overflow: auto; */
-
 }
 
 .m-content-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* padding: 24px 0; */
 }
 
-.m-header-title{
+.m-header-title {
     font-size: 24px;
     font-family: Notosans-Bold;
     color: #111;
 }
 
-.m-content-body{
+.m-content-body {
     background-color: #fff;
     padding: 0 16px;
     margin-top: 16px;
+    height: 100%;
 }
 
-.m-body-toolbar{
+.m-body-toolbar {
     padding: 12px 0;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     gap: 16px;
-    /* margin-top: 16px; */
 }
 
-.m-icon-refresh:hover{
+.m-icon-refresh:hover {
     cursor: pointer;
     opacity: 0.8;
 }
 
-.m-search-area{
+.m-search-area {
     display: flex;
     align-items: center;
+    justify-content: center;
     position: relative;
+    border: 1px solid #babec5;
+    border-radius: 4px;
+    padding-right: 8px;
+    box-sizing: border-box;
 }
 
-.m-input-search{
-    min-width: 240px;
-    width: 240px;
-   
-
+.m-input-search:focus .m-search-area {
+    border: 1px solid #2ca01c;
 }
 
-.m-input-icon{
-    background-position: -992px -360px;
-    background-position-y: center;
-    background-position-x: 12px;
-    padding-right: 36px;
-    padding-left: 16px;
-
+.m-input-34{
+    height: 34px;
 }
 
-.m-icon-search:hover{
-   opacity: 0.8;
+.m-search-area:hover {
+    outline: 1px solid #e2e2e2;
 }
 
-.m-icon-search{
-    position: absolute;
-    right: 8px;
+.m-input-search {
+    border: none;
+    padding-right: 0;
+}
+
+.m-input-search:hover {
+    outline: none;
+}
+
+.m-input-search:focus {
+    border: none;
+}
+
+.m-input-icon-search {
+    position: relative;
+    width: 36px;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
-    padding-left: 10px;
 }
