--- a/css/layout/paging.css
+++ b/css/layout/paging.css
@@ -1,19 +1,15 @@
 .m-pagination {
+    position: fixed;
+    bottom: 24px;
+    right: 40px;
+    left: 240px;
     height: 56px;
     padding: 20px 16px 19px ;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
 }
-
-/* .m-pagination-bar {
-    padding: 12px;
-    width: 100% !important;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-} */
 
 .m-pagination-right {
     display: flex;
@@ -37,6 +33,7 @@
 .m-page-number {
     display: flex;
     align-items: center;
+    margin-right: 30px;
 }
 
 .m-prev-page {
@@ -66,8 +63,8 @@
     padding: 0 6.5px;
 } */
 
-.m-pagination-left {
+/* .m-pagination-left {
     position: sticky;
     white-space: nowrap;
     display: flex;
-}
+} */
