--- a/html-css/css/components/button.css
+++ b/html-css/css/components/button.css
@@ -1,5 +1,5 @@
 .m-btn {
-    min-width: 100px;
+    min-width: 80px;
     height: 40px;
     color: #fff;
     text-align: center;
@@ -8,6 +8,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    outline-color:#1f1f1f;
 }
 
 /* button */
@@ -26,4 +27,20 @@
     background-position: 16px center;
     padding-left: 40px;
     padding-right: 16px;
+}.dialog-btn {
+    margin-left: 8px;
 }
+
+.lower-btn {
+    color: #1f1f1f;
+    border: 1px solid #5f5f5f;
+    background-color: #fff;
+}
+.lower-btn:hover {
+    background-color: #d2d3d6;
+}
+
+.lower-btn:active {
+    background-color: #bec0c7;
+}
+
