--- a/html-css/css/components/comboBox.css
+++ b/html-css/css/components/comboBox.css
@@ -21,7 +21,31 @@
 
 }
 
-m.m-combo-box option[hidden] {
-    font-size: 11px;
-    color: #BBBBBB;
+.dropdown {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 36px;
+    border: 1px solid #E6E6E6;
+    border-radius: 4px;
 }
+
+.m-dropdown-select {
+    border: none;
+    outline: none;
+    width: 100%;
+}
+
+/* .m-dropdown-select option {
+    height: 32px;
+}
+
+.m-dropdown-select option[selected] {
+    background-color: #50B83C;
+    color: #fff;
+}
+
+.m-dropdown-select option:hover {
+    color: #50B83C;
+    background-color: #f5f5f5;
+} */
