--- a/html-css/css/components/employee.css
+++ b/html-css/css/components/employee.css
@@ -1,111 +1,4 @@
-/* header */
-.header {
-    display: flex;
-    width: 100%;
-    height: 56px;
-}
 
-.header-left {
-    width: 200px;
-    height: 100%;
-    background-color: #393a3d;
-    display: flex;
-    align-items: center;
-}
-
-.m-icon {
-    width: 24px;
-    height: 24px;
-    margin: 0 16px;
-    cursor: pointer;
-}
-
-.logo {
-    width: 144px;
-    height: 100%;
-    padding: 10px;
-    padding-left: 0;
-}
-
-.img-icon {
-    width: 92px;
-    height: 36px;
-    cursor: pointer;
-}
-
-.header-right {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: calc(100% - 200px);
-    height: 100%;
-    font-size: 14px;
-    color: #666666;
-    background-color: #fff;
-}
-
-.header-branch {
-    width: 100%;
-    max-width: 300px;
-    display: flex;
-    cursor: pointer;
-}
-
-.header-branch-name {
-    width: 100%;
-    max-width: 260px;
-    height: 100%;
-    font-family: notosans Bold;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-
-.header-branch-icon {
-    width: 34px;
-    display: flex;
-    justify-content: center;
-}
-
-.menu-right {
-    display: flex;
-    align-items: center;
-    position: absolute;
-    right: 0;
-    background-color: #fff;
-}
-
-.m-icon.nav-icon {
-    margin: 0 12px;
-}
-
-.dropdown-user {
-    height: 50px;
-    display: flex;
-    align-items: center;
-    background-color: transparent;
-    outline: none;
-    border: none;
-    padding: 0 16px;
-    margin-right: 16px;
-    border-radius: 4px;
-    border: 3px solid transparent;
-
-    cursor: pointer;
-}
-
-.dropdown-user:focus {
-    border: 3px solid #dcdcdc;
-}
-
-.username {
-    font-family: notosans Bold;
-    padding: 0 8px;
-}
-
-.header-user-ava-img {
-    border-radius: 50%;
-}
 
 /* body */
 .body {
@@ -113,79 +6,124 @@
     height: calc(100vh - 56px);
 }
 
-/* sidebar */
-
-.sidebar {
-    width: 200px;
-    height: 100%;
-    background-color: #393a3d;
-}
-
-.sidebar-item-list {
-    height: 100%;
-    padding-top: 20px;
-}
-
-.sidebar-item {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 44px;
-    border-left: 6px solid transparent;
-    cursor: pointer;
-}
-
-.sidebar-item-icon {
-    width: 24px;
-    height: 24px;
-    margin: 12px 12px 12px 6px;
-}
-
-.sidebar-item-title {
-    font-size: 14px;
-    color: #fff;
-}
-
-.sidebar-item:hover {
-    background-color: hsla(218, 10%, 85%, 0.2);
-}
-
-.sidebar-item.active {
-    border-left: 6px solid #2ca01c;
-    background-color: hsla(218, 10%, 85%, 0.2);
-}
-
-.sidebar-item.active .sidebar-item-title {
-    font-family: notosans Bold;
-}
-
 .page {
     width: calc(100% - 200px);
     height: 100%;
-    background-color:blueviolet;
-    padding: 24px;
+    background-color:#f1f1f1;
+    position: relative;
+    padding: 0 24px;
 }
 
 .page-header {
-    height: 44px;
-    background-color: aqua;
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    padding: 24px 0;
+    align-items: center;
+}
+
+.page-header-title {
+    font-family: notosans Bold;
+    font-size: 24px;
 }
 
 .page-content {
-    height: calc(100% - 44px);
+    background-color: #fff;
+    padding: 0 20px;
+    height: calc(100% - 80px);
 }
 
 .page-toolbar {
-    height: 40px;
-    background-color: rgb(255, 0, 179);
+    display: flex;
+    align-items: center;
+    height: 80px;
+    justify-content: end;
 }
 
+.m-icon.refresh-icon {
+    padding-right: 8px;
+}
+
+.page-table {
+    background-color: #fff;
+}
 
 .page-paging {
+    display: flex;
+    position: sticky;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    justify-content:space-between;
+    align-items: center;
     height: 56px;
-    background-color: rgb(255, 0, 179);
+    background-color: #fff;
+    z-index: 4;
 }
-.page-table {
-    height: calc(100% - 96px);
-    background-color: brown;
+
+.total-record {
+    font-size: 11px;
+}
+
+.total-record span {
+    font-family: notosans Bold;
+}
+
+.right-paging {
+    display: flex;
+}
+
+.pagination {
+    display: flex;
+    align-items: center;
+}
+
+.page-btn {
+    height: 24px;
+    line-height: 24px;
+    border: 1px solid transparent;
+    text-align: center;
+    padding: 0 8px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.page-btn.active {
+    border: 1px solid #E6E6E6;
+}
+
+.page-btn.disable-btn {
+    cursor: default;
+}
+
+.loading {
+    z-index: 100;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: none;
+}
+
+.loading-icon {
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: rotate(50%,50%);
+    background-image: url(../../assets/loading.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    animation: loading-animation 1s ease;
+}
+
+@keyframes loading-animation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
