feat: thi công chức năng xóa

--- a/html-css/css/components/icon.css
+++ b/html-css/css/components/icon.css
@@ -195,3 +195,11 @@
 .ok-icon {
     background-position: -666px -456px;
 }
+
+.m-icon-arrow-down-blue {
+    background-position: -896px -359px;
+}
+
+.m-icon-arrow-dropdown {
+    background-position: -560px -359px;
+}
