--- a/html-css/css/style.css
+++ b/html-css/css/style.css
@@ -3,6 +3,7 @@
 @import url(./components/icon.css);
 @import url(./components/button.css);
 @import url(./components/comboBox.css);
+@import url(./components/dropdown.css);
 @import url(./components/input.css);
 @import url(./components/employee.css);
 @import url(./layout/header.css);
@@ -48,6 +49,7 @@
     font-family: notosans;
     font-size: 13px;
     margin: 0;
+    padding: 0;
     /* outline: none; */
 }
 
